--- a/checkout.html
+++ b/checkout.html
@@ -5,11 +5,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout</title>
+    <script src="https://kit.fontawesome.com/35c398e458.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="commoncss.css" type="text/css" />
     <link rel="stylesheet" href="checkout.css" type="text/css" />
   </head>
   <body>
-    <a href="checkout.html"><h3 id="count">count: 0</h3></a>
+    <header>
+      <nav id="topbar">
+        <div id="left-menu">
+          <div id="logo">
+            <a href="index.html"><span>Shop</span>lane</a>
+          </div>
+          <a href="index.html#clothingsec" id="clothinglink">Clothing</a>
+          <a href="index.html#accessoriessec" id="accessorieslink"
+            >Accessories</a
+          >
+        </div>
+        <div id="search-wrapper">
+          <i class="fas fa-search" aria-hidden="true"></i>
+          <input
+            id="search-box"
+            type="text"
+            name="search"
+            placeholder="Search for Clothing and Accessories"
+          />
+        </div>
+        <div id="right-menu">
+          <div id="cart-wrapper">
+            <p id="count"></p>
+            <a href="checkout.html"
+              ><i class="fas fa-shopping-cart" aria-hidden="true"></i
+            ></a>
+          </div>
+          <img
+            src="https://edyodalms.s3.amazonaws.com/media/profilepictures/1642527720513-2.jpeg"
+          />
+        </div>
+      </nav>
+    </header>
     <div class="mainsec"></div>
+    <img
+      id="edyoda-projects-logo"
+      src="https://i.imgur.com/OKAY6Fl.png"
+      alt="EdYoda Projects Logo"
+    />
+    <footer>
+      <div>
+        <h4>Online Store</h4>
+        <ul>
+          <li><a href="#">Men clothing</a></li>
+          <li><a href="#">Women clothing</a></li>
+          <li><a href="#">Men Accessories</a></li>
+          <li><a href="#">Women Accessories</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Helpful Links</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Partners</h4>
+        <ul>
+          <li><a href="#">Zara</a></li>
+          <li><a href="#">Pantaloons</a></li>
+          <li><a href="#">Levis</a></li>
+          <li><a href="#">UCB</a></li>
+          <li><a href="#">+ Many More</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Address</h4>
+        <p>
+          Building 101<br />
+          Central Avenue<br />
+          LA - 902722<br />
+          United States
+        </p>
+      </div>
+    </footer>
     <script src="checkout.js"></script>
   </body>
 </html>
