--- a/index.html
+++ b/index.html
@@ -5,11 +5,153 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/35c398e458.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+      integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="commoncss.css" type="text/css" />
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
-    <a href="checkout.html"><h3 id="count">count: 0</h3></a>
-
+    <header>
+      <nav id="topbar">
+        <div id="left-menu">
+          <div id="logo">
+            <a href="index.html"><span>Shop</span>lane</a>
+          </div>
+          <a href="#clothingsec" id="clothinglink">Clothing</a>
+          <a href="#accessoriessec" id="accessorieslink">Accessories</a>
+        </div>
+        <div id="search-wrapper">
+          <i class="fas fa-search" aria-hidden="true"></i>
+          <input
+            id="search-box"
+            type="text"
+            name="search"
+            placeholder="Search for Clothing and Accessories"
+          />
+        </div>
+        <div id="right-menu">
+          <div id="cart-wrapper">
+            <p id="count"></p>
+            <a href="checkout.html"
+              ><i class="fas fa-shopping-cart" aria-hidden="true"></i
+            ></a>
+          </div>
+          <img
+            src="https://edyodalms.s3.amazonaws.com/media/profilepictures/1642527720513-2.jpeg"
+          />
+        </div>
+      </nav>
+    </header>
+    <section>
+      <div class="center">
+        <img src="https://imgur.com/96OnkX7.png" />
+        <img src="https://imgur.com/KtGxwnN.png" />
+        <img src="https://imgur.com/sfjg9R8.png" />
+        <img src="https://imgur.com/p0wdadG.png" />
+      </div>
+    </section>
+    <div id="maincontent"></div>
+    <img
+      id="edyoda-projects-logo"
+      src="https://i.imgur.com/OKAY6Fl.png"
+      alt="EdYoda Projects Logo"
+    />
+    <footer>
+      <div>
+        <h4>Online Store</h4>
+        <ul>
+          <li><a href="#">Men clothing</a></li>
+          <li><a href="#">Women clothing</a></li>
+          <li><a href="#">Men Accessories</a></li>
+          <li><a href="#">Women Accessories</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Helpful Links</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Partners</h4>
+        <ul>
+          <li><a href="#">Zara</a></li>
+          <li><a href="#">Pantaloons</a></li>
+          <li><a href="#">Levis</a></li>
+          <li><a href="#">UCB</a></li>
+          <li><a href="#">+ Many More</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Address</h4>
+        <p>
+          Building 101<br />
+          Central Avenue<br />
+          LA - 902722<br />
+          United States
+        </p>
+      </div>
+    </footer>
     <script src="index.js"></script>
+    <script>
+      var hash = window.location.hash;
+      if (hash === "#clothingsec") {
+        $("html, body").animate({ scrollTop: $(hash).offset().top + 200 });
+      }
+      if (hash === "#accessoriessec") {
+        $("html, body").animate({ scrollTop: $(hash).offset().top + 650 });
+      }
+      console.log($(hash).offset());
+
+      $("#accessorieslink").click(function () {
+        $("html, body").animate(
+          {
+            scrollTop: $("#accessoriessec").offset().top - 150,
+          },
+          700
+        );
+        console.log($(hash).offset());
+      });
+
+      $("#clothinglink").click(function () {
+        $("html, body").animate(
+          {
+            scrollTop: $("#clothingsec").offset().top - 150,
+          },
+          700
+        );
+        console.log($(hash).offset());
+      });
+    </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"
+      integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script>
+      $(document).ready(function () {
+        $(".center").slick({
+          dots: true,
+          arrows: false,
+          autoplay: true,
+          infinite: true,
+          autoplaySpeed: 4000,
+        });
+      });
+    </script>
   </body>
 </html>
