--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout</title>
-    <script src="https://kit.fontawesome.com/35c398e458.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -19,15 +25,19 @@
       <nav id="topbar">
         <div id="left-menu">
           <div id="logo">
+            <i class="fa fa-bars" id="barclick"></i>
             <a href="index.html"><span>Shop</span>lane</a>
           </div>
+        </div>
+        <div id="pagelinks">
           <a href="index.html#clothingsec" id="clothinglink">Clothing</a>
           <a href="index.html#accessoriessec" id="accessorieslink"
             >Accessories</a
           >
         </div>
+
         <div id="search-wrapper">
-          <i class="fas fa-search" aria-hidden="true"></i>
+          <i class="fa fa-search" aria-hidden="true"></i>
           <input
             id="search-box"
             type="text"
@@ -39,7 +49,7 @@
           <div id="cart-wrapper">
             <p id="count"></p>
             <a href="checkout.html"
-              ><i class="fas fa-shopping-cart" aria-hidden="true"></i
+              ><i class="fa fa-shopping-cart" aria-hidden="true"></i
             ></a>
           </div>
           <img
@@ -48,10 +58,10 @@
         </div>
       </nav>
     </header>
-    <div class="mainsec"></div>
+    <div class="sectionouter"></div>
     <img
       id="edyoda-projects-logo"
-      src="https://i.imgur.com/OKAY6Fl.png"
+      src="./img/edyoda.png"
       alt="EdYoda Projects Logo"
     />
     <footer>
@@ -92,6 +102,7 @@
         </p>
       </div>
     </footer>
+    <script src="commonjs.js"></script>
     <script src="checkout.js"></script>
   </body>
 </html>
