--- a/thankyou.html
+++ b/thankyou.html
@@ -68,7 +68,7 @@
       <div class="center">
         <i class="fa fa-check" aria-hidden="true"></i>
         <h1>Order Placed Successfully!!</h1>
-        <p>We have sent you an email with the order details</p>
+        <!-- <p>We have sent you an email with the order details</p> -->
       </div>
     </section>
     <div id="maincontent"></div>
@@ -125,7 +125,7 @@
       // }
       let cart = document.querySelector("#count");
       // console.log(JSON.parse(localStorage.getItem("cart")) == null);
-        cart.innerText = 0;
-    
+      cart.innerText = 0;
+      localStorage.removeItem("cart")
     </script>
 </html>
